done with playlist edit and remove
